--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"url": "https://sebabratakundu.com"
 	},
 	"scripts": {
-		"dev": "nodemon server.js"
+		"dev": "nodemon server.js",
+		"start": "node server.js"
 	},
 	"dependencies": {
 		"cors": "^2.8.5",
