update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "Link Previewer Server",
+	"name": "link-preview-server",
 	"version": "1.0.0",
 	"author": {
 		"email": "info@sebabratakundu.com",
